--- a/less/main/messages.less
+++ b/less/main/messages.less
@@ -216,6 +216,14 @@
 		text-transform: uppercase;
 		text-align: center;
 		.transition(all 0.25s ease-in-out);
+	
+		.make-font-a-little-smaller(@font__button--font-size);
+		.make-font-smaller(@font__button--font-size);
+		.make-font-a-lot-smaller(@font__button--font-size);
+
+		.make-line-height-a-little-smaller(@font__button--line-height);
+		.make-line-height-smaller(@font__button--line-height);
+		.make-line-height-a-lot-smaller(@font__button--line-height);
 		
 		&:hover {
 			padding: 1em 2em;
